# godot-ink-native

./: .gdlintrcignore  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  TODO.md
.github/workflows/: release.yml
addon/: gd-ink-native.gdextension.in  gd_ink_compiler.gd  ink.gdextension.in  ink_plugin.gd  ink_story_importer.gd  plugin.cfg
demo/: project.godot
demo/examples/: external_functions.ink  hello.ink  hello.inkb  hello.inkj  test_story.ink
demo/tests/: example_import_plugin.gd  test_basic.gd  test_basic.gd.uid  test_basic.tscn  test_comprehensive.gd  test_comprehensive.gd.uid  test_comprehensive.tscn
docs/: build.md  ink-api-analysis.md  quickstart.md  reference.md  reference.md.backup
docs/plans/: 2026-01-24-github-actions-release-design.md
scripts/: README.md  _common.sh  build-version.sh  clean-version.sh  gdformat.sh  gdlint.sh  lib-pin-ink.sh  lib-show-versions.sh  lib-update-all.sh  lib-update-godot.sh  lib-update-ink.sh  lib-update.sh  release-all.sh  release-version.sh  target-build.sh  target-clean.sh  target-package-libs.sh  target-package.sh  target-release.sh  test-run.sh  test-setup.sh  validate-run.sh  validate-setup.sh
src/: ink_choice.cpp  ink_choice.h  ink_compiler.cpp  ink_compiler.h  ink_story.cpp  ink_story.h  ink_utils.cpp  ink_utils.h  ink_value.cpp  ink_value.h  register_types.cpp  register_types.h
